# mesa

./: .gitignore  GONZO  meson.build  meson.options  meson_options.txt
gonsolo/: .gitignore  GONZO  Makefile  bla.c  test.py
include/drm-uapi/: borg_drm.h
src/: bindings.cpp  meson.build
src/borg/: meson.build
src/borg/compiler/: bak.h  bak_bindings.h  bak_nir.c  bak_print.c  bak_private.h  lib.rs  meson.build
src/borg/compiler/bak/: api.rs  assign_regs.rs  builder.rs  encode.rs  from_nir.rs  ir.rs  ir_proc.rs  lib.rs  lower_copy.rs  nir.rs  sm.rs
src/borg/vulkan/: borg_buffer.c  borg_buffer.h  borg_cmd_buffer.c  borg_cmd_buffer.h  borg_cmd_dispatch.c  borg_cmd_pool.c  borg_cmd_pool.h  borg_command_buffer.c  borg_command_buffer.h  borg_debug.h  borg_descriptor_set.c  borg_descriptor_set.h  borg_descriptor_set_layout.c  borg_descriptor_set_layout.h  borg_device.c  borg_device.h  borg_device_memory.c  borg_device_memory.h  borg_format.c  borg_heap.c  borg_heap.h  borg_image.c  borg_instance.c  borg_instance.h  borg_nir_lower_descriptors.c  borg_physical_device.c  borg_physical_device.h  borg_pipeline.c  borg_private.h  borg_queue.c  borg_queue.h  borg_sampler.h  borg_shader.c  borg_shader.h  borgvk_cmd_buffer.c  borgvk_compiler.c  borgvk_descriptor_set.c  borgvk_device.c  borgvk_memory.c  borgvk_pipeline.c  (+7 more)
src/borg/winsys/: borg_bo.c  borg_bo.h  borg_ws_device.c  borg_ws_device.h  meson.build
src/compiler/: bindings.cpp  meson.build
src/compiler/nir/: meson.build  nir_print.c
src/compiler/nir/tests/: test_constant_corruption.cpp
src/nouveau/compiler/: meson.build  nak_print.c  nak_private.h
src/nouveau/compiler/nak/: api.rs  from_nir.rs
src/nouveau/vulkan/: nvk_nir_lower_descriptors.c
src/nouveau/winsys/: nouveau_bo.h
